--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -1,3 +1,41 @@
 #mainBody {
     height: 700px;
 }
+
+#sideNav li{
+    position: relative;
+    display: block;
+    padding: .75rem 1.25rem;
+    margin-bottom: -1px;
+    background-color: #fff;
+    border: 1px solid black;
+    border-right: 0;
+    border-left: 0;
+    border-radius: 0;
+}
+
+#sideNav li a{
+    color: #000;
+}
+
+#sideNav li:first-child{
+        border-top: 0;
+}
+
+#sideNav li.current-menu-item{
+    background-color: #000;
+}
+
+#sideNav li.current-menu-item a{
+    color: white;
+}
+
+.headerImage {
+    width: 100%;
+    height: 60vh;
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
