Worked on pages and single posts, adapted it to my layout

--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -10,6 +10,10 @@
     height: 100%;
 }
 
+#pagesPostsBody {
+    height: 100%;
+}
+
 #sideNav li{
     position: relative;
     display: block;
@@ -40,6 +44,7 @@
 
 #sideNav li a:hover {
     text-decoration: none;
+    color: #fc6621;
 }
 
 .headerImage {
