Fixed up billing form layout

--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -77,6 +77,32 @@
     color: black;
 }
 
+.billingFields .form-row{
+    width: 100% !important;
+}
+
+.billingFields .form-row .woocommerce-input-wrapper{
+    width: 100% !important;
+}
+
+.billingFields .form-row .woocommerce-input-wrapper input,
+.billingFields .form-row .woocommerce-input-wrapper select{
+    height: calc(1.5em + .75rem + 2px) !important;
+    padding: .375rem .75rem !important;
+    font-size: 1rem !important;
+    font-weight: 400 !important;
+    line-height: 1.5 !important;
+}
+
+.billingFields .form-row .woocommerce-input-wrapper textarea{
+    min-height: 200px !important;
+    max-height: 800px !important;
+    padding: .375rem .75rem !important;
+    font-size: 1rem !important;
+    font-weight: 400 !important;
+    line-height: 1.5 !important;
+}
+
 @media only screen and (max-width:650px){
     #sidebarNav {
         display: none !important;
